testdata/k8s/wordpress/non-default.manifest.yaml
---
# Source: wordpress/templates/mysql-manifests.yaml
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: release-name-mysql
  labels: &MySQLDeploymentLabels
    app.kubernetes.io/name: "release-name"
    app.kubernetes.io/component: wordpress-mysql
spec:
  replicas: 1
  selector:
    matchLabels: *MySQLDeploymentLabels
  serviceName: release-name-mysql-svc
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels: *MySQLDeploymentLabels
    spec:
      containers:
      - image: marketplace.gcr.io/google/wordpress/mysql:latest
        name: mysql
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: release-name-mysql-pvc
          mountPath: /var/lib/mysql
          subPath: data
        - name: mysql-config
          mountPath: /docker-entrypoint-initdb.d
          readOnly: true
        readinessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MYSQL_ROOT_PASSWORD"]
          initialDelaySeconds: 15
        livenessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MYSQL_ROOT_PASSWORD"]
          initialDelaySeconds: 120
      - image: marketplace.gcr.io/google/wordpress/mysqld-exporter:latest
        name: mysqld-exporter
        ports:
        - name: exporter
          containerPort: 9104
        livenessProbe:
          httpGet:
            path: /metrics
            port: 9104
        readinessProbe:
          httpGet:
            path: /metrics
            port: 9104
          initialDelaySeconds: 60
          timeoutSeconds: 30
          failureThreshold: 10
          periodSeconds: 10
      
      - name: prometheus-to-sd
        image: marketplace.gcr.io/google/wordpress/prometheus-to-sd:latest
        command:
        - /monitor
        - --stackdriver-prefix=custom.googleapis.com
        - --source=mysql:http://localhost:9104/metrics
        - --pod-id=$(POD_NAME)
        - --namespace-id=$(POD_NAMESPACE)
        - --monitored-resource-types=k8s
      volumes:
      - name: mysql-config
        secret:
          secretName: release-name-mysqld-exporter-secret
          items:
          - key: mysqld_exporter.sql
            path: mysqld_exporter.sql
  volumeClaimTemplates:
  - metadata:
      name: release-name-mysql-pvc
      labels:
        app.kubernetes.io/name: "release-name"
        app.kubernetes.io/component: wordpress-server
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-mysql-svc
  labels:
    app.kubernetes.io/name: "release-name"
    app.kubernetes.io/component: wordpress-mysql
spec:
  ports:
  - name: mysql
    port: 3306
  selector:
    app.kubernetes.io/name: "release-name"
    app.kubernetes.io/component: wordpress-mysql
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-mysqld-exporter-svc
  labels:
    app.kubernetes.io/name: release-name
    app.kubernetes.io/component: wordpress-mysql
spec:
  ports:
  - name: exporter
    port: 9104
  selector:
    app.kubernetes.io/name: release-name
    app.kubernetes.io/component: wordpress-mysql
  clusterIP: None

---
# Source: wordpress/templates/wordpress-manifests.yaml
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: release-name-wordpress
  labels: &WordPressDeploymentLabels
    app.kubernetes.io/name: "release-name"
    app.kubernetes.io/component: wordpress-webserver
spec:
  replicas: 1
  serviceName: release-name-wordpress-svc
  selector:
    matchLabels: *WordPressDeploymentLabels
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels: *WordPressDeploymentLabels
    spec:
      containers:
      - image: marketplace.gcr.io/google/wordpress:latest
        name: wordpress
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: release-name-wordpress-pvc
          mountPath: /var/www/html
          subPath: wp
        - name: config-map
          mountPath: /wp-install.sh
          subPath: wp-install.sh
          readOnly: true
        # .htaccess must be overwritten to allow connection to the /server-status endpoint.
        - name: apache-config
          mountPath: /var/www/html/.htaccess
          subPath: .htaccess
          readOnly: true
        lifecycle:
          postStart:
            exec:
              command:
              - "/bin/bash"
              - "-eu"
              - "/wp-install.sh"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 120
      - image: marketplace.gcr.io/google/wordpress/apache-exporter:latest
        name: apache-exporter
        args:
        - --scrape_uri=http://127.0.0.1/server-status?auto
        ports:
        - name: exporter
          containerPort: 9117
        livenessProbe:
          httpGet:
            path: /metrics
            port: 9117
        readinessProbe:
          httpGet:
            path: /metrics
            port: 9117
          initialDelaySeconds: 60
          timeoutSeconds: 30
          failureThreshold: 10
          periodSeconds: 10
      
      - name: prometheus-to-sd
        image: marketplace.gcr.io/google/wordpress/prometheus-to-sd:latest
        command:
        - /monitor
        - --stackdriver-prefix=custom.googleapis.com
        - --source=apache:http://localhost:9117/metrics
        - --pod-id=$(POD_NAME)
        - --namespace-id=$(POD_NAMESPACE)
        - --monitored-resource-types=k8s
      volumes:
      - name: apache-config
        configMap:
          name: release-name-wordpress-config
          items:
          - key: .htaccess
            path: .htaccess
      - name: config-map
        configMap:
          name: release-name-wordpress-config
          items:
          - key: wp-install.sh
            path: wp-install.sh
  volumeClaimTemplates:
  - metadata:
      name: release-name-wordpress-pvc
      labels:
        app.kubernetes.io/name: "release-name"
        app.kubernetes.io/component: wordpress-webserver
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-wordpress-svc
  labels:
    app.kubernetes.io/name: "release-name"
    app.kubernetes.io/component: wordpress-webserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/name: "release-name"
    app.kubernetes.io/component: wordpress-webserver
  
  type: NodePort
  
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-apache-exporter-svc
  labels:
    app.kubernetes.io/name: release-name
    app.kubernetes.io/component: wordpress-webserver
spec:
  ports:
  - name: exporter
    port: 9117
  selector:
    app.kubernetes.io/name: release-name
    app.kubernetes.io/component: wordpress-webserver
  clusterIP: None

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-wordpress-ingress
  labels:
    app.kubernetes.io/name: "release-name"
    app.kubernetes.io/component: wordpress-webserver
spec:
  tls:
  - secretName: release-name-tls
  backend:
    serviceName: release-name-wordpress-svc
    servicePort: http


---
# Source: wordpress/templates/application.yaml
